<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <include
      android:id="@+id/progress_bar"
      layout="@layout/layout_loader"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/movie_poster"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scaleType="fitXY"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:srcCompat="@tools:sample/avatars" />

  <androidx.cardview.widget.CardView
      android:id="@+id/summary_card_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_large"
      app:cardBackgroundColor="@color/white"
      app:cardCornerRadius="@dimen/spacing_large"
      app:cardElevation="@dimen/spacing_small"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHeight_max="300dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/spacing_large"
          android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <com.google.android.material.textview.MaterialTextView
              android:id="@+id/movie_average_vote"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/spacing_normal"
              android:drawableTop="@drawable/ic_star"
              android:gravity="center"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
              android:textColor="?colorPrimary"
              android:textStyle="bold"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              tools:text="9.9" />

          <com.google.android.material.textview.MaterialTextView
              android:id="@+id/movie_popularity"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:drawableTop="@drawable/ic_rank"
              android:gravity="center"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
              android:textColor="?colorPrimary"
              android:textStyle="bold"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              tools:text="9.9" />

          <com.google.android.material.textview.MaterialTextView
              android:id="@+id/movie_release_date"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/spacing_large"
              android:drawableTop="@drawable/ic_calendar"
              android:gravity="center"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
              android:textColor="?colorPrimary"
              android:textStyle="bold"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              tools:text="2021" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/summary_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_over_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintLeft_toRightOf="@id/movie_poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/movie_poster"
            tools:text="Overview" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/related_movie_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/related_movie_list_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-4dp"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_movie_list" />

      </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>