<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_search"
      android:icon="@drawable/ic_search"
      android:title="@string/action_search_title"
      app:actionViewClass="androidx.appcompat.widget.SearchView"
      app:showAsAction="ifRoom|collapseActionView" />
</menu>