<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color">

  <include
      android:id="@+id/progress_bar"
      layout="@layout/layout_loader"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <include
      android:id="@+id/initial_movie_list_layout"
      layout="@layout/layout_initial_movie_list"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/spacing_normal"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:visibility="visible" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/search_movie_list_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_margin="@dimen/spacing_normal"
      android:visibility="gone"
      app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:spanCount="2"
      tools:listitem="@layout/item_movie_list" />

</androidx.constraintlayout.widget.ConstraintLayout>